[project]
name = "comfyui-transceiver"
version = "0.1.0"
description = "ComfyUI custom nodes binding for transciever library"
authors = [ { name = "nat-chan", email = "ogino.natsuki.tm@alumni.tsukuba.ac.jp" } ]
dependencies = [
    "transceiver>=0.1.3",
    "comfyui-annotations @ git+https://github.com/andrewharp/ComfyUI-Annotations",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff",
    "mypy",
    "pydantic",
    "toml>=0.10.2",
    "grip>=4.6.2",
    "pylance>=0.10.15",
    "ipykernel>=6.29.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["./"]


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
exclude = [".venv"]
select = [
    "B",
    "C4",
    "E",
    "G",
    "W",
    "F",
    "I",
    "UP",
    "EXE",
    "F",
    "SIM1",
    "LOG",
    "NPY",
    "PERF",
    "PGH004",
    "PIE794",
    "PIE800",
    "PIE804",
    "PIE807",
    "PIE810",
    "PLC0131",
    "PLC0132",
    "PLC0205",
    "PLE",
    "PLR0133",
    "PLR0206",
    "PLR1722",
    "PLW0129",
    "PLW0406",
    "PLW0711",
    "PLW1509",
    "PLW3301",
    "PT006",
    "PT022",
    "PT023",
    "PT024",
    "PT025",
    "PT026",
    "PYI",
    "RUF008",
    "RUF015",
    "RUF016",
    "RUF017",
    "TRY200",
    "TRY302",
]
